[package]
name = "hex-noalloc"
version = "0.3.2"
authors = ["KokaKiwi <kokakiwi@kokakiwi.net>"]
description = "Encoding and decoding data into/from hexadecimal representation."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/hex-noalloc/"
repository = "https://github.com/chrysn/rust-hex"

[features]
default = ["std"]
std = []
benchmarks = []
